Update project links and homepage: Changed GitHub links from AngelGketsis to SolusAstraDev and updated the homepage URL in package.json to reflect the new project ownership.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://angelgketsis.github.io/cv-site/",
+  "homepage": "https://solusastradev.github.io/cv-site/",
   "name": "cv-site",
   "version": "0.1.0",
   "private": true,
